<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/infoHead"
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#3D8E41"
            android:elevation="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/activate_header"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_activation_code"
            android:textAlignment="center"
            android:textColor="#151515"
            android:textSize="18sp" />


    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextActivationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:autofillHints="Tarp codes should be 12 characters long."
        android:ems="10"
        android:hint="@string/activation_code"
        android:inputType="textPersonName|textPassword"
        android:textAlignment="center" />

</LinearLayout>